created a css file

--- a/sent.html
+++ b/sent.html
@@ -6,19 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital X</title>
     <link rel="icon" href="imgs/Digital X-white-favicon.ico">
-    <style>
-        
-        div{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-           height: 100vh;
-        }
-
-        #img{
-            width: 15em;
-        }
-    </style>
+    <link rel="stylesheet" href="./sent.css">
+   
 </head>
 <body>
 
