--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Digital X</title>
     <link rel="icon" href="imgs/Digital X-white-favicon.ico">
     <link rel="stylesheet" href="./sent.css">
+    <style>
+            div{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100vh;
+            }
+
+        #img{
+            width: 15em;
+        }
+    </style>
    
 </head>
 <body>
